# Jump Start Changelog

## 2.3.4 - XX/XX/2019

--------------------------------------------------------------

## 2.3.3 - 02/24/2019

* **Updated Theme Blvd framework to 2.8.3**
* Updated: Bootstrap to 3.4.1; this includes a patch for some XSS vulnerabilities. [Learn More](https://wptavern.com/bootstrap-patches-xss-vulnerability-in-versions-4-3-1-and-3-4-1).
* Updated: Font Awesome to 5.7.2.

--------------------------------------------------------------

## 2.3.2 - 01/23/2019

* **Updated Theme Blvd framework to 2.8.2**
* Fixed: JavaScript file for chart elements not getting included correctly (Filename had the incorrect case; the file was renamed from `Chart.min.js` to `chart.min.js`).
* Fixed: Empty top header bar displaying on Super User and Entrepreneur theme bases, when it should be hidden.
* Fixed: Mobile website header displaying with "Blank" page template; the website header should never display at all with this page template.
* Fixed: Minor HTML output issue when the theme filters the the WordPress core `[caption]` shortcode.
* Fixed: Stars not displaying when a WooCommerce user is writing a review.
* Fixed: Plus (+) and minus (-) symbols breaking the "Milestone" component.
* Updated: Font Awesome to 5.6.3.

--------------------------------------------------------------

## 2.3.1 - 12/07/2018

* **Updated Theme Blvd framework to 2.8.1**
* Fixed: Missing theme stylesheets for bbPress, Gravity Forms, WooCommerce, and WPML.

--------------------------------------------------------------

## 2.3.0 - 12/06/2018

* **Updated Theme Blvd framework to 2.8.0**
* New: Basic WordPress 5+ block editor compatibility (i.e. Gutenberg).
	* Added default block stylesheet from WordPress.
	* Added basic, general support for new `alignwide` and `alignfull` options.
	* Matched media caption styling of blocks to default caption styling of theme.
	* Moved "Sidebar Layout" option to "Theme Layout" meta box, for editing both Posts and Pages.